# capgate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  add2Start_up.sh  add3Start_up.sh  bootstrap.sh  capgate  capgate.py  capgate_main.py  main.py  output_live.txt  output_show.txt  pyproject.toml  requirements.txt  setup_ios_lab.sh  start_up.sh
brain/: recorder.py  trainer.py
config/: default.yaml  interfaces.yaml
data/topology/: discovery.json
docs/airwave/: integration.md  roadmap.md
docs/assets/diagrams/: state_context_graph.mmd
docs/state_management/: context.md  state.md
help/: aircrack-ng_workflow
nexusdevtools/: search.js  src.html
nexusdevtools/src/: agent.html  capgate_types.html  cli.html  config.html  core.html  db.html  helpers.html  paths.html  plugin_template.html  plugins.html  runner.html  utils.html  vision.html  wordlists.html
nexusdevtools/src/agent/: knowledge_base.html  mod_coor.html  tools.html
nexusdevtools/src/capgate_types/: brain.html  core.html  db.html  vision.html
nexusdevtools/src/cli/: capgate_cli.html  commands.html  graph.html
nexusdevtools/src/config/: config.html
nexusdevtools/src/core/: ap_manager.html  capture_manager.html  cracking_manager.html  credential_verifier.html  debug_tools.html  dhcp_dns_manager.html  exceptions.html  graphs.html  interface_controller.html  interface_manager.html  logger.html  network_scanner.html  plugin_creator.html  plugin_loader.html  state_management.html  traffic_redirector.html  web_server_manager.html
nexusdevtools/src/db/: schemas.html
nexusdevtools/src/helpers/: filetools.html  nettools.html  shelltools.html  string_utils.html
nexusdevtools/src/plugin_template/: my_new_plugin.html
nexusdevtools/src/plugins/: el_topo.html  evil_twin.html  osint_profiler.html  wifi_crack_automation.html
nexusdevtools/src/vision/: scanners.html
scripts/: eav.sh
src/: paths.py  runner.py  utils.py
src/agent/: mod_coor.py  tools.py
src/agent/knowledge_base/: chroma.sqlite3
src/base/: ap_manager.py  capture_manager.py  cracking_manager.py  credential_verifier.py  debug_tools.py  dhcp_dns_manager.py  exceptions.py  interface_controller.py  interface_manager.py  logger.py  network_scanner.py  plugin_creator.py  plugin_loader.py  traffic_redirector.py  web_server_manager.py
src/base/graphs/: topology.py
src/base/state_management/: context.py
src/cli/: capgate_cli.py  cli.py  graph.py
src/cli/commands/: boot.py  debug_commands.py
src/config/: config.py
src/core/: ap_manager.py  capture_manager.py  context.py  cracking_manager.py  credential_verifier.py  debug_tools.py  dhcp_dns_manager.py  interface_controller.py  interface_manager.py  logger.py  network_scanner.py  plugin_loader.py  traffic_redirector.py  web_server_manager.py
src/core/graphs/: topology.py
src/core/state_management/: context.py  state.py
src/db/schemas/: device.py  interface.py
src/helpers/: shelltools.py
src/ios_lab/: README.md
src/nexus/: index.py
src/nexus/cli/: app.py
types/core/: context_types.py
(+64 files in other folders)
