[project]
name = "capgate"
version = "0.1.0"
description = "CapGate - Wireless Attack Automation Toolkit"
authors = [{name = "Eric Nash", email = "enash8@my.chemeketa.edu"}]
dependencies = ["typer[all]"]
requires-python = ">=3.8"

[project.scripts]
capgate = "cli.capgate_cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
